--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <link rel="icon" type="image/svg+xml" href="/defaultico.png" />
+    <link rel="icon" type="image/svg+xml" href="icons/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="icons/defaultico.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Criteo Coding Task</title>
   </head>
